...
                android:id="@+id/layout_container"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/column_layout"
                    android:layout_weight="1"
                    android:src="@drawable/column_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <ImageSwitcher
...
                    android:id="@+id/fairy_layout"
                    android:src="@drawable/fairy_looks_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:id="@+id/page_layout"
                    android:layout_weight="1"
                    android:src="@drawable/page_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


...
